# ltris2

./: .gitignore  Changelog  README  TODO  configure.ac
libgame/: Makefile.am  bowl.c  bowl.h  config.h  cpu.c  event.c  ltris.h  parser.c  sdl.c  shrapnells.c  shrapnells.h  tetris.c  tetris.h  tools.c  tools.h
ltris2/: .gitignore  CROSSCOMPILE  Changelog  Makefile.am  TODO  aclocal.m4  config.status  configure  configure.ac  ltris2.desktop
ltris2/libgame/: Makefile.am  bowl.c  bowl.h  chart.c  chart.h  config.c  cpu.h  event.c  ltris.h  sdl.c  sdl.h  shrapnells.c  tetris.c  tetris.h  tools.c
ltris2/m4/: Makefile.am
ltris2/po/: ChangeLog  POTFILES.in  de.po
ltris2/src/: Makefile.am  config.cpp  config.h  hiscores.cpp  main.cpp  menu.cpp  menu.h  mixer.h  sdl.cpp  sdl.h  sprite.cpp  sprite.h  theme.cpp  theme.h  tools.cpp  tools.h  vbowl.cpp  vbowl.h  vcharts.cpp  vcharts.h  vconfig.cpp  vconfig.h  vgame.cpp  vgame.h  view.cpp  view.h
ltris2/src/themes/Standard/: CREDITS  Makefile.am  menu.xcf  theme.ini
m4/: ChangeLog
po/: Makevars  de.po
src/: Makefile.am  hiscores.cpp  hiscores.h  menu.cpp  menu.h  sdl.cpp  sdl.h  sprite.h  theme.cpp  theme.h  vbowl.h  vconfig.cpp  vconfig.h  vgame.cpp  vgame.h  view.cpp  view.h
src/themes/Standard/: CREDITS  Makefile.am
