AUTOMAKE_OPTIONS = foreign
SUBDIRS = m4 po libgame src 
EXTRA_DIST = COPYING INSTALL ABOUT-NLS README TODO CROSSCOMPILE \
	Changelog ltris2.desktop ltris2.png gettext.h config.rpath

desktopdir = $(datadir)/applications
desktop_DATA = ltris2.desktop
icondir = $(datadir)/icons/hicolor/256x256/apps
icon_DATA = ltris2.png

ACLOCAL_AMFLAGS = -I m4
